YAMLS/cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
  namespace: default
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: cache  
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache-container
          image: redis:latest 
          ports:
            - containerPort: 6379  
---
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: cache
  ports:
    - port: 6379  
      targetPort: 6379
